AC_INIT(configure.in)

AM_INIT_AUTOMAKE(svxgeo, 1.00)

AC_PROG_CXX(CC g++)
AC_PROG_F77(gfortran f77 g77)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

### Checks for libraries.
AC_F77_LIBRARY_LDFLAGS

if test $ac_cv_prog_gxx = yes; then
  CXXFLAGS="$CXXFLAGS  -Wall -Werror -pthread"
fi

AC_OUTPUT(Makefile)
